# gomoku

./: .gitignore  CMakeLists.txt  LICENSE  data.txt  main.c  openings.cpp  openings.txt
includes/: data.txt  openings.h
openings/: README.md  config.yaml  formula.txt  match.js  opening.yaml
